--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   liveui
   data-setup='{}'
 >
-  <source src="https://ip38.avrupatelekom.com:3995/stream/play.m3u8" type="application/x-mpegURL" />
+  <source src="https://ip38.avrupatelekom.com:3995/hybrid/play.m3u8" type="application/x-mpegURL" />
   Sizin brauzer video formatını dəstəkləmir.
 </video>
 
